# plot_audio_fft

./: .gitignore  AudioFile.cpp  AudioFile.hpp  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DebugTimer.hpp  FFT.cpp  FFT.h  LinePlot.cpp  LinePlot.h  LinePlot.hpp  ScopedStopwatch.hpp  main.cpp
src/: AudioFile.hpp  FFT.cpp  FFT.hpp  MainWindow.cpp  MainWindow.hpp  RangeSlider.cpp  RangeSlider.hpp  Readme.md  main.cpp  settings.hpp
src/DAQ/: AudioFile.cpp  AudioFile.hpp
src/DSP/: FFT.cpp  FFT.hpp
src/View/: CustomChartXY.cpp  CustomChartXY.hpp  FFTLinePlot.cpp  FFTLinePlot.hpp  Plot2D.cpp  Plot2D.hpp
src/common/: ScopedStopwatch.hpp
